--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 asgiref==3.8.1
 Django==5.1.7
 django-cors-headers==4.7.0
+django-debug-toolbar==5.1.0
 django-filter==25.1
+django-redis==5.4.0
 djangorestframework==3.16.0
+redis==5.2.1
 sqlparse==0.5.3
 typing_extensions==4.13.0
