--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 asgiref==3.8.1
+click==8.1.8
 Django==5.1.7
 django-cors-headers==4.7.0
 django-debug-toolbar==5.1.0
 django-filter==25.1
 django-redis==5.4.0
+django-rq==3.0.0
 djangorestframework==3.16.0
 redis==5.2.1
+rq==2.3.2
 sqlparse==0.5.3
 typing_extensions==4.13.0
