--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,20 @@
 asgiref==3.8.1
+certifi==2025.4.26
+charset-normalizer==3.4.1
 click==8.1.8
+dj-rest-auth==7.0.1
 Django==5.1.7
+django-allauth==65.7.0
 django-cors-headers==4.7.0
 django-debug-toolbar==5.1.0
 django-filter==25.1
 django-redis==5.4.0
 django-rq==3.0.0
 djangorestframework==3.16.0
+idna==3.10
 redis==5.2.1
+requests==2.32.3
 rq==2.3.2
 sqlparse==0.5.3
 typing_extensions==4.13.0
+urllib3==2.4.0
