password reset test

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ django-rest-authemail==2.1.7
 django-rq==3.0.0
 djangorestframework==3.16.0
 idna==3.10
+python-decouple==3.8
 python-ipware==3.0.0
 redis==5.2.1
 requests==2.32.3
