--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -36,5 +36,8 @@ jobs:
             /home/christoph/backends/videoflix-backend/venv/bin/pip install -r requirements.txt
             /home/christoph/backends/videoflix-backend/venv/bin/python manage.py migrate --noinput
             /home/christoph/backends/videoflix-backend/venv/bin/python manage.py collectstatic --noinput
+            sudo supervisorctl reread
+            sudo supervisorctl update
             sudo supervisorctl restart videoflix-gunicorn
+            sudo supervisorctl restart videoflix-rqworker
           EOF
