--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
+amqp==5.3.1
 asgiref==3.8.1
+billiard==4.2.1
+celery==5.5.2
 certifi==2025.4.26
 charset-normalizer==3.4.1
 click==8.1.8
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 Django==5.2
 django-cors-headers==4.7.0
 django-debug-toolbar==5.1.0
@@ -15,11 +21,19 @@ ffmpeg-python==0.2.0
 future==1.0.0
 gunicorn==23.0.0
 idna==3.10
+kombu==5.5.3
+packaging==25.0
+prompt_toolkit==3.0.51
+python-dateutil==2.9.0.post0
 python-decouple==3.8
 python-ipware==3.0.0
 redis==5.2.1
 requests==2.32.3
 rq==2.3.2
+six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.13.0
+tzdata==2025.2
 urllib3==2.4.0
+vine==5.1.0
+wcwidth==0.2.13
