--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ idna==3.10
 kombu==5.5.3
 packaging==25.0
 prompt_toolkit==3.0.51
+psycopg2-binary==2.9.10
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 python-ipware==3.0.0
