--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -39,5 +39,5 @@ jobs:
             sudo supervisorctl reread
             sudo supervisorctl update
             sudo supervisorctl restart videoflix-gunicorn
-            sudo supervisorctl restart videoflix-rqworker
+            sudo supervisorctl restart videoflix-celery
           EOF
